# mays

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  catch2_main.cc
.github/workflows/: clang-format-check.yml  clang-tidy-push.yml  clang-tidy-review.yml  codeql-analysis.yml  unit_tests.yml
mays/: CMakeLists.txt  add.h  add_test.cc  array_size.h  array_size_test.cc  average.h  average_test.cc  clamp.h  clamp_test.cc  crc.h  crc_test.cc  divide.h  divide_round_nearest.h  divide_round_nearest_test.cc  divide_round_up.h  divide_round_up_test.cc  divide_test.cc  multiply.h  multiply_test.cc  nabs.h  nabs_test.cc  negate_if.h  negate_if_test.cc  range_map.h  range_map_test.cc  reduce.h  reduce_test.cc  round_policy.h  scale.h  scale_test.cc  sign_of.h  sign_of_test.cc  subtract.h  subtract_test.cc
mays/internal/: CMakeLists.txt  check.h  check_test.cc  concepts.h  polyfill.h  type_traits.h
